# points-strategy-engine

./: .gitignore  README.md  README_PLAN.md  main.py  pyproject.toml  requirements.txt
api/: __init__.py  main.py  routes.py  schemas.py
cli/: play.py
config/: user.example.yml
data/: andaz_tokyo_2027-11-20_2027-12-04.json  ph_tokyo_2027-11-20_2027-12-04.json
engine/: models.py  render_markdown.py  scorer.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  Message.tsx  PlanView.tsx
frontend/src/lib/: api.ts
providers/flights/: delta_msp_hnd.py
providers/hotels/: hyatt.py
pte/assistant/: session.py
pte/cli/: chat.py  plan.py
pte/engine/: models.py  render_markdown.py  scorer.py
pte/nlp/: intent.py  llm_intent_ollama.py
pte/providers/flights/: delta_msp_hnd.py
pte/providers/hotels/: hyatt.py
pte/utils/: date_utils.py
pte/webapp/: app.py
tests/: test_nlp.py  test_smoke.py
utils/: date_utils.py
